infra/cdk.out/nvinodan-sprintmanager-NetworkStack.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "nvinodan-sprintmanager-NetworkStack/Vpc"
     },
     {
      "Key": "Owner",
      "Value": "nvinodan@presidio.com"
     },
     {
      "Key": "Project",
      "Value": "nvinodan-sprintmanager"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/Vpc/Resource"
   }
  },
  "VpcpublicSubnet1Subnet2BB74ED7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "nvinodan-sprintmanager-NetworkStack/Vpc/publicSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "nvinodan@presidio.com"
     },
     {
      "Key": "Project",
      "Value": "nvinodan-sprintmanager"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/Vpc/publicSubnet1/Subnet"
   }
  },
  "VpcpublicSubnet1RouteTable15C15F8E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "nvinodan-sprintmanager-NetworkStack/Vpc/publicSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "nvinodan@presidio.com"
     },
     {
      "Key": "Project",
      "Value": "nvinodan-sprintmanager"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/Vpc/publicSubnet1/RouteTable"
   }
  },
  "VpcpublicSubnet1RouteTableAssociation4E83B6E4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/Vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet1DefaultRouteB88F9E93": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/Vpc/publicSubnet1/DefaultRoute"
   }
  },
  "VpcpublicSubnet2SubnetE34B022A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "nvinodan-sprintmanager-NetworkStack/Vpc/publicSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "nvinodan@presidio.com"
     },
     {
      "Key": "Project",
      "Value": "nvinodan-sprintmanager"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/Vpc/publicSubnet2/Subnet"
   }
  },
  "VpcpublicSubnet2RouteTableC5A6DF77": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "nvinodan-sprintmanager-NetworkStack/Vpc/publicSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "nvinodan@presidio.com"
     },
     {
      "Key": "Project",
      "Value": "nvinodan-sprintmanager"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/Vpc/publicSubnet2/RouteTable"
   }
  },
  "VpcpublicSubnet2RouteTableAssociationCCE257FF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet2SubnetE34B022A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/Vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet2DefaultRoute732F0BEB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/Vpc/publicSubnet2/DefaultRoute"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "nvinodan-sprintmanager-NetworkStack/Vpc"
     },
     {
      "Key": "Owner",
      "Value": "nvinodan@presidio.com"
     },
     {
      "Key": "Project",
      "Value": "nvinodan-sprintmanager"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/Vpc/VPCGW"
   }
  },
  "ClusterEB0386A7": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "nvinodan-sprintmanager",
    "ClusterSettings": [
     {
      "Name": "containerInsights",
      "Value": "enabled"
     }
    ],
    "Tags": [
     {
      "Key": "Owner",
      "Value": "nvinodan@presidio.com"
     },
     {
      "Key": "Project",
      "Value": "nvinodan-sprintmanager"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/Cluster/Resource"
   }
  },
  "ClusterDefaultServiceDiscoveryNamespaceC336F9B4": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "nvinodan-sprintmanager.local",
    "Tags": [
     {
      "Key": "Owner",
      "Value": "nvinodan@presidio.com"
     },
     {
      "Key": "Project",
      "Value": "nvinodan-sprintmanager"
     }
    ],
    "Vpc": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/Cluster/DefaultServiceDiscoveryNamespace/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/22QQWvDMAyFf8vujrd50HvJYOxSQjp6LYqiMbWJXSw5oRj/95EtLJed9L2PBw/krNu92KcHmKXC/loN3Nl8VMCrgVnOmdDZfLqhqT/9qalNk7qB8Zg6T7q4jdqQlD6gG2jzm9uLBGRQDv6vvMC7V4qe9A2UZrivM2vaqwJ+jeS1GEKxuR6SKMWltWIxQnFipJ4Fw0TxbnMTeQKlVy8HGElugD9T/+hSTEsSUkQqxoee7EUeJ+fs8/KTizBXMXnlkWz7e78BohzVoDABAAA="
   },
   "Metadata": {
    "aws:cdk:path": "nvinodan-sprintmanager-NetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefVpc8378EB38272D6E3A": {
   "Value": {
    "Ref": "Vpc8378EB38"
   },
   "Export": {
    "Name": "nvinodan-sprintmanager-NetworkStack:ExportsOutputRefVpc8378EB38272D6E3A"
   }
  },
  "ExportsOutputRefClusterEB0386A796A0E3FE": {
   "Value": {
    "Ref": "ClusterEB0386A7"
   },
   "Export": {
    "Name": "nvinodan-sprintmanager-NetworkStack:ExportsOutputRefClusterEB0386A796A0E3FE"
   }
  },
  "ExportsOutputRefVpcpublicSubnet1Subnet2BB74ED74EB42ADC": {
   "Value": {
    "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
   },
   "Export": {
    "Name": "nvinodan-sprintmanager-NetworkStack:ExportsOutputRefVpcpublicSubnet1Subnet2BB74ED74EB42ADC"
   }
  },
  "ExportsOutputRefVpcpublicSubnet2SubnetE34B022AC8BB6627": {
   "Value": {
    "Ref": "VpcpublicSubnet2SubnetE34B022A"
   },
   "Export": {
    "Name": "nvinodan-sprintmanager-NetworkStack:ExportsOutputRefVpcpublicSubnet2SubnetE34B022AC8BB6627"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
